<resources>
    <string name="app_name">FalloutPnPRoller</string>
    <string name="character_name">Speedwagon Speedwagon</string>
    <string name="menu_button_1">Status</string>
    <string name="menu_button_2">S.P.E.C.I.A.L</string>
    <string name="menu_button_3">Roller</string>
    <string name="menu_button_4">Skills</string>
    <string name="menu_button_5">General</string>
    <string name="roll_button_text">Roll</string>
    <string name="skill_text">Skill</string>
    <string name="skill_type_text">Temp</string>
    <string name="plus_text">Plus</string>
    <string name="minus_text">Minus</string>
    <string name="dice_roll_text">Dice</string>
</resources>
