<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_centerHorizontal="true"
    android:rowCount="1"
    android:rowOrderPreserved="false"
    android:useDefaultMargins="false"
    android:id="@+id/menuLayout">

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:textColor="@color/colorPrimaryText"
        android:text="@string/menu_button_1"
        android:id="@+id/menuButton2"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/menuButton3"
        android:layout_marginRight="40dp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:textColor="@color/colorPrimaryText"
        android:text="@string/menu_button_2"
        android:id="@+id/menuButton3"
        android:layout_marginRight="40dp"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/menuButton4"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:textColor="@color/colorPrimaryText"
        android:text="@string/menu_button_3"
        android:id="@+id/menuButton4"
        android:layout_centerHorizontal="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:textColor="@color/colorPrimaryText"
        android:text="@string/menu_button_4"
        android:id="@+id/menuButton5"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/menuButton4"
        android:layout_marginLeft="40dp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:textColor="@color/colorPrimaryText"
        android:text="@string/menu_button_5"
        android:id="@+id/menuButton6"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/menuButton5"
        android:layout_marginLeft="40dp" />
</RelativeLayout>