<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="@drawable/background">

    <include layout="@layout/main_menu"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimaryText"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/character_name"
        android:id="@+id/textView"
        android:layout_above="@+id/menuLayout"
        android:layout_centerHorizontal="true"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:textColor="@color/colorPrimaryText"
                android:text="@string/roll_button_text"
                android:id="@+id/rollButton"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/colorPrimaryText"
                android:text="roll"
                android:id="@+id/effectValue"
                android:layout_below="@+id/rollButton"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="105dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/colorPrimaryText"
                android:text="@string/skill_text"
                android:id="@+id/skillText"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="30dp" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryText"
                android:inputType="number"
                android:maxLength="2"
                android:ems="2"
                android:id="@+id/skillValue"
                android:layout_alignParentRight="true"
                android:layout_alignBaseline="@+id/skillText"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/colorPrimaryText"
                android:text="@string/plus_text"
                android:id="@+id/plusText"
                android:layout_below="@+id/skillText"
                android:layout_marginTop="30dp"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryText"
                android:inputType="number"
                android:maxLength="2"
                android:ems="2"
                android:id="@+id/plusValue"
                android:layout_alignParentRight="true"
                android:layout_alignBaseline="@+id/plusText"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/colorPrimaryText"
                android:text="@string/minus_text"
                android:id="@+id/minusText"
                android:layout_below="@+id/plusText"
                android:layout_marginTop="30dp"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryText"
                android:inputType="number"
                android:maxLength="2"
                android:ems="2"
                android:id="@+id/minusValue"
                android:layout_alignParentRight="true"
                android:layout_alignBaseline="@+id/minusText"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/colorPrimaryText"
                android:text="@string/dice_roll_text"
                android:id="@+id/diceText"
                android:layout_below="@+id/minusText"
                android:layout_marginTop="30dp"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryText"
                android:inputType="number"
                android:maxLength="2"
                android:ems="2"
                android:id="@+id/diceValue"
                android:layout_alignParentRight="true"
                android:layout_alignBaseline="@+id/diceText"/>
        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>